load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
load("@vaticle_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "simple_proto",
    srcs = ["simple.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

kt_jvm_proto_library(
    name = "simple_kt_jvm_proto",
    deps = [":simple_proto"],
)

assemble_maven(
    name = "assemble-maven",
    target = ":simple_kt_jvm_proto"
)

proto_library(
    name = "depends_on_simple_proto",
    srcs = ["depends_on_simple.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        ":simple_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

kt_jvm_proto_library(
    name = "depends_on_simple_kt_jvm_proto",
    deps = [":depends_on_simple_proto"],
)
